# hace

./: CMakeLists.txt  README.md  package.xml
hace_core/: CMakeLists.txt  package.xml
hace_core/include/: DepthDatum.h  HumanProcessor.h  RosDepthInput.h  RosDepthOutput.h  RosImageProducer.h  RosWorkerOutput.h  cv_convert.h
hace_core/launch/: floka.launch  floka_torso_cam.launch  meka.launch
hace_core/src/: HumanProcessor.cpp  RosDepthInput.cpp  RosDepthOutput.cpp  RosImageProducer.cpp  RosWorkerOutput.cpp  cv_convert.cpp  flag_defines.cpp  hace.cpp
hace_msgs/: CMakeLists.txt  package.xml
hace_msgs/msg/: HaceDebug.msg  MinimalHuman.msg  MinimalHumans.msg
